--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <p><em>Purwadhika Digital Technology School</em></p>
           <br>
           <ul>
-            <li>Dedicated 4 months gaining deep knowledge in Python Programming, Data Analysis, and Machine Learning, developed 12 impactful projects.</li>
+            <li>Dedicated 4 months gaining deep knowledge in Python Programming, Data Analysis, and Machine Learning, developed 9 impactful projects.</li>
             <li>Conducted extensive data analysis using Tableau and Looker Studio, along with Python libraries for exploratory data analysis.</li>
             <li>Explored various AI and machine learning concepts, including different model algorithms and metrics, deep learning techniques, and data
               processing with Apache Spark.</li>
@@ -400,6 +400,9 @@
           <img src="./assets/1.png" alt="Project 1" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">Telco Customer Churn Classification</h2>
+        <p class="" style="text-align: center;">Developed a machine learning model for classification prediction to predict churn rate of Telco 
+          customers using comparison of various models (XGBoost, Voting Classifier, KNN, RandomForest, etc.) and techniques, including sampling, 
+          feature selection, and evaluation methods.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/capstone-modul-3.git')" style="padding: 10px; margin: 5px;">Github</button>
         </div>
@@ -411,6 +414,8 @@
           <img src="./assets/2.png" alt="Project 6" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">Airbnb Bangkok Listing Analysis</h2>
+        <p class="" style="text-align: center;">Conducted a deep data analysis on Airbnb Bangkok listings data using Python along with Tableau for story-
+          based visualization to extract profitable insights and enhance business understanding.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/capstone-modul-2.git')" style="padding: 10px; margin: 5px;">Github</button>
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://public.tableau.com/shared/KQCYQGFH2?:display_count=n&:origin=viz_share_link')" style="padding: 10px; margin: 5px;">Tableau Dashboard</button>
@@ -423,6 +428,8 @@
           <img src="./assets/3.png" alt="Project 3" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">Gold Prices Forecasting</h2>
+        <p class="" style="text-align: center;">Developed a machine learning model for forecasting future gold prices, comparing algorithms like ARIMA, SARIMA, 
+          and Prophet to determine the best-predicting model.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1Bk7miKkqsj9WzXBc8yMNuYzVg7w_opMy?usp=sharing')" style="padding: 10px; margin: 5px;">Colab</button>
         </div>
@@ -433,9 +440,10 @@
         <div class="article-container">
           <img src="./assets/4.png" alt="Project 5" class="project-img" />
         </div>
-        <h2 class="experience-sub-title project-title" style="text-align: center;">RFM Segmentation Analysis</h2>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">Supermarket Customers RFM Segmentation Analysis</h2>
+        <p class="" style="text-align: center;">Identify supermarket customers based on their behaviour using RFM (Recency, Frequency, Monetary) scores. Each customers are grouped into distinct, controllable categories. This project applies RFM to effectively target each segment with tailored strategies.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
-          <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1b5gLW2WcC79Ys0u-gT_6LoqETS8t6Re5?usp=sharing')" style="padding: 10px; margin: 5px;">Colab</button>
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1ZCZIAnfb0EVYVJFEXNJQisQs5MlNutC9?usp=sharing')" style="padding: 10px; margin: 5px;">Colab</button>
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://public.tableau.com/app/profile/zia.tabaruk/viz/RFMSupermarketAnalysis/StoryRFMSupermarketAnalysis?publish=yes')" style="padding: 10px; margin: 5px;">Tableau Dashboard</button>
         </div>
       </div>
@@ -446,6 +454,9 @@
           <img src="./assets/5.png" alt="Project 2" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">School Student Performance Prediction</h2>
+        <p class="" style="text-align: center;">Developed a machine learning model for multiple linear regression to predict student performance 
+          score using various models (Linear Regression, Ridge, Lasso, SVR, etc.) and common relevant metrics such as Adjusted R-Squared, 
+          RMSE, and Residual Analysis.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1gQ_th8C38SuUjgT5siGaLvNT9uwqLuMz?usp=sharing')" style="padding: 10px; margin: 5px;">Colab</button>
         </div>
@@ -456,7 +467,8 @@
         <div class="article-container">
           <img src="./assets/6.png" alt="Project 4" class="project-img" />
         </div>
-        <h2 class="experience-sub-title project-title" style="text-align: center;">Cohort Retention Analysis</h2>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">E-Commerce Customers Cohort Retention Analysis</h2>
+        <p class="" style="text-align: center;">Conducted a thorough data analysis on retention of an e-commerce retail store customers using cohort retention methods and visualized using Google Looker. Customers are segmented into different cohorts to allow detailed retention analysis.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1g-SFifZVmVDpUp22EbdLAzAql4-qszHi#scrollTo=c7cce6f5-d39e-4926-9f1d-f91072854b24')" style="padding: 10px; margin: 5px;">Colab</button>
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://lookerstudio.google.com/u/2/reporting/a78ab318-3602-4823-b9ed-0f3176411f93/page/sLuCE/edit')" style="padding: 10px; margin: 5px;">Looker Dashboard</button>
@@ -468,7 +480,8 @@
         <div class="article-container">
           <img src="./assets/7.png" alt="Project 4" class="project-img" />
         </div>
-        <h2 class="experience-sub-title project-title" style="text-align: center;">Warehouse Management CRUD Python</h2>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">Apple Electronics Warehouse Management</h2>
+        <p class="" style="text-align: center;">A simple yet effective terminal-based Python program that lets you manage an Apple Electronics warehouse with the core functions of CRUD (Create - Read - Update - Delete).</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/capstone_modul_1.git')" style="padding: 10px; margin: 5px;">Github</button>
         </div>
@@ -480,6 +493,7 @@
           <img src="./assets/8.png" alt="Project 4" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">BandingBot</h2>
+        <p class="" style="text-align: center;">A handy web scraper to compare product costs from various e-commerce website like Tokopedia, Shopee, Lazada, and Bukalapak. This project uses tools such as Pupeteer for its web-scraping technology.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/BandingBot.git')" style="padding: 10px; margin: 5px;">Github</button>
         </div>
@@ -491,6 +505,7 @@
           <img src="./assets/9.png" alt="Project 4" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">HackChat</h2>
+        <p class="" style="text-align: center;">Real-time web-based chat application, hacker themed!. This project uses the power of web sockets using Socket.IO to build real-time communications.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/HackChat.git')" style="padding: 10px; margin: 5px;">Github</button>
         </div>
@@ -502,6 +517,7 @@
           <img src="./assets/10.png" alt="Project 4" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">AnaKost</h2>
+        <p class="" style="text-align: center;">A full-stack web application for expense tracking. It is responsive for mobile devices and was built with React.js and Express.js</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/anakost-server.git')" style="padding: 10px; margin: 5px;">Github</button>
         </div>
@@ -513,6 +529,7 @@
           <img src="./assets/11.png" alt="Project 4" class="project-img" />
         </div>
         <h2 class="experience-sub-title project-title" style="text-align: center;">Medium - Python Blog</h2>
+        <p class="" style="text-align: center;">Simple and straightforward blog discussing about the importance of error handling in Python. It covers the basic use of try-catch block, complete with best practices and code examples.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://medium.com/@zachariabachtiar/teknik-penanganan-error-di-python-dengan-blok-try-except-4701aed980f7')" style="padding: 10px; margin: 5px;">Blog</button>
         </div>
