--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         <div class="article-container">
           <img src="./assets/11.png" alt="Project 4" class="project-img" />
         </div>
-        <h2 class="experience-sub-title project-title" style="text-align: center;">Medium - Python Blog</h2>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">The Importance of Error Handling</h2>
         <p class="" style="text-align: center;">Simple and straightforward blog discussing about the importance of error handling in Python. It covers the basic use of try-catch block, complete with best practices and code examples.</p>
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://medium.com/@zachariabachtiar/teknik-penanganan-error-di-python-dengan-blok-try-except-4701aed980f7')" style="padding: 10px; margin: 5px;">Blog</button>
