--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p> 3 Work Experiences <br> 4+ Months Training <br /> 9 Projects <br> Data Science & ML</p>
+              <p> 3 Work Experiences <br> 4+ Months Training <br /> 3 Certifications <br> 11 Projects </p>
             </div>
             <div class="details-container">
               <img
@@ -102,7 +102,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelor Software Engineering<br /> Fresh Graduate (2024) <br> Telkom University <br> 3.91 GPA</p>
+              <p>Software Engineering<br /> Fresh Graduate (2024) <br> Telkom University <br> 3.91 GPA</p>
             </div>
           </div>
           <div class="text-container">
@@ -291,8 +291,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Tensorflow</h3>
-                  <p>Basic/Primary</p>
+                  <h3>Statsmodels</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -324,7 +324,7 @@
           <p><em>Purwadhika Digital Technology School</em></p>
           <br>
           <ul>
-            <li>Dedicated 4 months gaining deep knowledge in Python Programming, Data Analysis, and Machine Learning, developed 9 impactful projects.</li>
+            <li>Dedicated 4 months gaining deep knowledge in Python Programming, Data Analysis, and Machine Learning, developed 8 impactful projects.</li>
             <li>Conducted extensive data analysis using Tableau and Looker Studio, along with Python libraries for exploratory data analysis.</li>
             <li>Explored various AI and machine learning concepts, including different model algorithms and metrics, deep learning techniques, and data
               processing with Apache Spark.</li>
@@ -419,6 +419,18 @@
         <div class="btn-container" style="text-align: center; margin: 10px 0;">
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/jeksilaen/capstone-modul-2.git')" style="padding: 10px; margin: 5px;">Github</button>
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://public.tableau.com/shared/KQCYQGFH2?:display_count=n&:origin=viz_share_link')" style="padding: 10px; margin: 5px;">Tableau Dashboard</button>
+        </div>
+      </div>
+
+      <!-- Project Item 1 -->
+      <div class="details-container color-container project-item fullstack" style="width: 30%; margin: 1.5%; border: 1px solid #ccc; border-radius: 5px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
+        <div class="article-container">
+          <img src="./assets/12.png" alt="Project 12" class="project-img" />
+        </div>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">Olist Late Delivery Detection using PySpark</h2>
+        <p class="" style="text-align: center;">A classification machine learning model developed using PySpark to predict the likelihood of a late delivery for a Brazillian E-Commerce called Olist. This project includes the use of RandomForest model, with techniques such as sampling and model-based feature selection.</p>
+        <div class="btn-container" style="text-align: center; margin: 10px 0;">
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://colab.research.google.com/drive/1LygCdgi3h0wBTL-zLpjGRCdRagzHG22m?usp=sharing')" style="padding: 10px; margin: 5px;">Colab</button>
         </div>
       </div>
 
