--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <p><em>Informatics Laboratory Telkom University</em></p>
           <br>
           <ul>
-            <li>Providing guided assistance twice a week to practicum students on Operating Systems such as Linux, Ubuntu, dan Xinu.</li>
+            <li>Providing guided assistance twice a week to practicum students on Operating Systems such as Linux, Ubuntu, and Xinu.</li>
             <li>Supervise the flow of the practicum process for 70+ practicum students.</li>
           </ul>
         </div>
