--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Google Colab</h3>
+                  <h3>BigQuery</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -302,8 +302,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Folium</h3>
-                  <p>Basic/Primary</p>
+                  <h3>Google Colab</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
