--- a/index.html
+++ b/index.html
@@ -546,6 +546,18 @@
           <button class="btn btn-color-2 project-btn" onclick="window.open('https://medium.com/@zachariabachtiar/teknik-penanganan-error-di-python-dengan-blok-try-except-4701aed980f7')" style="padding: 10px; margin: 5px;">Blog</button>
         </div>
       </div>
+
+      <!-- Project Item 4 -->
+      <div class="details-container color-container project-item others" style="width: 30%; margin: 1.5%; border: 1px solid #ccc; border-radius: 5px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);">
+        <div class="article-container">
+          <img src="./assets/13.png" alt="Project 4" class="project-img" />
+        </div>
+        <h2 class="experience-sub-title project-title" style="text-align: center;">Marketing Strategy Optimization Through RFM Analysis on Retail Transaction Dataset Using Python</h2>
+        <p class="" style="text-align: center;">This study aims to optimize marketing strategies through RFM (Recency, Frequency, Monetary) analysis on retail transaction datasets obtained from Kaggle. The dataset includes 64,682 transactions from 5,242 SKUs involving 22,625 customers over a period of one year.</p>
+        <div class="btn-container" style="text-align: center; margin: 10px 0;">
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://prin.or.id/index.php/mri/article/view/3246')" style="padding: 10px; margin: 5px;">Article</button>
+        </div>
+      </div>
   
     </div>
   </div>
