--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ independent and collaborative settings.
           <h4>Informatics Laboratory Telkom University</h4>
           <p><em>Operating Systems Practicum Assistant</em> <h5>02/2023 - 07/2023</h5></p>
           <ul>
-            <li>Providing guided assistance twice a week to practicum students on Operating Systems such as Linux, Ubuntu, and Xinu.</li>
-            <li>Supervise the flow of the practicum process for 70+ practicum students.</li>
+            <li>Provided guided assistance twice a week to practicum students on Operating Systems such as Linux, Ubuntu, and Xinu.</li>
+            <li>Supervised the flow of the practicum process for 70+ practicum students.</li>
           </ul>
         </div>
     
